# jtracing

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
.kiro/specs/allocation-age-tracking/: design.md  requirements.md  tasks.md
.kiro/specs/output-file-option/: design.md  requirements.md  tasks.md
.kiro/specs/segfault-analyzer/: design.md  requirements.md  tasks.md
.vim/: coc-settings.json
bash_readline/: bash_readline.rs
bash_readline/bpf/: bash_readline.bpf.c
bootstrap_perfbuf/: bootstrap.bpf.c  bootstrap.c  bootstrap.h
docs/design/: malloc_free.md  malloc_free_enhancements.md
docs/usage/: memory_leak_detection.md  segfault_analyzer.md  segfault_analyzer_quick_reference.md  test_segfault_analyzer.sh
eglswapbuffers/: eglswapbuffers.rs
eglswapbuffers/bpf/: eglswapbuffers.bpf.c
execsnoop_pb/: execsnoop_pb.rs
execsnoop_pb/bpf/: execsnoop_pb.bpf.c
execsnoop_rb/: execsnoop_rb.rs
execsnoop_rb/bpf/: execsnoop_rb.bpf.c
funccount/: funccount.rs  tracepoints
funccount/bpf/: funccount.bpf.c
lib/: error.rs  kprobe.rs  lib.rs  symbolanalyzer.rs  tracelog.rs
malloc_free/: malloc_free.rs
malloc_free/bpf/: malloc_free.bpf.c
opensnoop/: opensnoop.rs
packet_count/: packet_count.rs
packet_count/bpf/: packet_count.bpf.c
profile/: profile.rs
profile/bpf/: profile.bpf.c
segfault_analyzer/: README.md  segfault_analyzer.rs
segfault_analyzer/bpf/: .gitignore  segfault_analyzer.bpf.c
src/: kprobe.rs  lib.rs  opensnoop.rs  tracelog.rs
testfiles/: Makefile  segfault_examples.c  test_stack_smashing.c
