[package]
name = "jtracing"
version = "0.1.7"
description = "Tracing utilites."
authors = ["Seimizu Joukan <joukan.seimizu@gmail.com>"]
repository = "https://github.com/saimizi/jtracing.git"
edition = "2021"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tracelib"
path = "lib/lib.rs"

[[bin]]
name = "opensnoop"
path = "opensnoop/opensnoop.rs"

[[bin]]
name = "execsnoop_pb"
path = "execsnoop_pb/execsnoop_pb.rs"

[[bin]]
name = "execsnoop_rb"
path = "execsnoop_rb/execsnoop_rb.rs"

[[bin]]
name = "funccount"
path = "funccount/funccount.rs"

[[bin]]
name = "eglswapbuffers"
path = "eglswapbuffers/eglswapbuffers.rs"

[[bin]]
name = "profile"
path = "profile/profile.rs"

[[bin]]
name = "bash_readline"
path = "bash_readline/bash_readline.rs"

[[bin]]
name = "malloc_free"
path = "malloc_free/malloc_free.rs"

[dependencies]
clap = { version="3.1", features = ["derive"] }
regex = "1"
rand = "0.8"
tokio = {version = "1", features = ["full"]}
libbpf-rs = "0.21"
libc = "0.2"
plain = "0.2"
ctrlc = "3.2"
chrono = "0.4"
hex = "0.4"
object = "0.29"
memmap = "0.7"
cpp_demangle = "0.3"
byteorder = "1.4"
error-stack = { version = "0.3.1", features = ["anyhow"] }
jlogger-tracing = "0.1.4"
once_cell = "1.18.0"
perf-event-open-sys = "4.0.0"

[profile.release]
strip = true

[build-dependencies]
libbpf-cargo = "0.21"
jlogger-tracing = "0.1.4"
cc = "1.0.82"
